--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Url shortener with Mongo, express, React, Node",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "client:install": "npm install --prefix client",
+    "client:build": "npm run build --prefix client",
+    "dev": "cross-env NODE_ENV=development concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "cross-env": "^6.0.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -25,6 +28,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.6",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "shortid": "^2.2.15"
   }
 }
